# fiap-aiscientist-fase2

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PASSO_A_PASSO_EXECUCAO_E_EXCLUSAO.txt  README.md  pyproject.toml  requirements-runtime.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml
assets/: architecture.dot  data_flow.dot  data_model.dot
config/: sources.yaml
dataform/: Dockerfile  workflow_settings.yaml
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DELIVERY_MANIFEST.md  FINOPS.md  FONTES_DADOS_URLS.txt  GIT_WORKFLOW.md  GUIA_TRANSFERENCIA_BIGQUERY.md  IA_APPLICATIONS.md  IMPLEMENTATION_GUIDE.md  LIMPEZA_GCP.md  MAPA_ARQUIVOS_E_FERRAMENTAS.txt  ONDE_COLOCAR_PROJECT_ID.txt  RUNBOOK.md  SHA256SUMS.txt  VALIDATION_REPORT.md  VIDEO_SCRIPT.md
docs/deliverables/: Apresentacao_Tech_Challenge_Alfabetizacao_GCP.pptx  Manual_Implementacao_Tech_Challenge_Alfabetizacao_GCP.docx
schemas/: stream_event.json
scripts/: build_and_deploy_batch.sh  configure_dataform.py  deploy_all.sh  destroy_demo.sh  limpar_gcp.ps1  limpar_gcp.sh  run_batch_transform.sh  run_dataflow.sh  run_dataform.sh  schedule_batch.sh  setup_gcp.sh  smoke_test.sh  stop_dataflow.sh  transferir_dados_inep.py
sql/bronze/: 01_exemplo_copia_direta.sql
sql/dashboard/: 01_kpis.sql  02_mapa_municipal.sql  (+2 more)
src/: __init__.py
tech_challenge_alfabetizacao_gcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_sources_config.py  test_streaming_models.py
(+42 files in other folders)
