[project]
name = "tech-challenge-alfabetizacao-gcp"
version = "1.0.0"
description = "Pipeline híbrido Batch + Streaming para análise da alfabetização no Brasil no GCP"
requires-python = ">=3.10,<=3.13.2"
dependencies = [
  "google-cloud-bigquery>=3.25,<4",
  "google-cloud-storage>=2.18,<4",
  "google-cloud-pubsub>=2.23,<3",
  "google-cloud-logging>=3.11,<4",
  "apache-beam[gcp]>=2.60,<3",
  "PyYAML>=6.0,<7",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.8,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "I001"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
